<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_test">Test</string>
    <string name="action_switch">Switch</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="team1view">Team 1 View</string>
    <string name="team2view">Team 2 View</string>
    <string name="team1timer"></string>
    <string name="team2timer"></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="switch_timer">SWITCH</string>

    <string name="hello_first_fragment">Enter Player Names</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
