<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="157dp"
        android:layout_height="83dp"
        android:layout_marginBottom="100dp"
        android:text="00:00"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_second" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/team2view"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="517dp"
        android:layout_height="169dp"
        android:text="@string/switch_timer"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/team1view"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="157dp"
        android:layout_height="83dp"
        android:layout_marginTop="100dp"
        android:text="00:00"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ballMade_button"
        android:layout_width="125dp"
        android:layout_height="73dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="Ball Made"
        app:layout_constraintEnd_toStartOf="@+id/ballsLeft1"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/ballMade_button2"
        android:layout_width="125dp"
        android:layout_height="73dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="Ball Made"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/ballsLeft2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ballsLeft1"
        android:layout_width="125dp"
        android:layout_height="67dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="7"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/ballsLeft2"
        android:layout_width="125dp"
        android:layout_height="67dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="4dp"
        android:text="7"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/ballMade_button2" />

</androidx.constraintlayout.widget.ConstraintLayout>